@@ -1,15 +1,16 @@
-# $NetBSD: Makefile,v 1.5 2018/07/28 14:40:52 brook Exp $
+# $NetBSD: Makefile,v 1.6 2019/07/31 20:47:23 brook Exp $
 
-CATEGORIES=	security
+CATEGORIES=	security R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://dirk.eddelbuettel.com/code/digest.html
-COMMENT=	Create cryptographic hash digests of R objects
-LICENSE=	gnu-gpl-v2
+COMMENT=	Create compact hash digests of R objects
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	digest
-R_PKGVER=	0.6.15
+R_PKGVER=	0.6.20
 
-BUILDLINK_API_DEPENDS.R+=	R>=2.4.1
+USE_LANGUAGES+=	c c++
+
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
