@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3206 2019/07/31 20:46:05 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3207 2019/07/31 20:47:23 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5163,3 +5163,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated misc/R-pillar to 1.4.2 [brook 2019-07-31]
 	Updated net/R-pbdZMQ to 0.3.3 [brook 2019-07-31]
 	Updated print/R-knitr to 1.23 [brook 2019-07-31]
+	Updated security/R-digest to 0.6.20 [brook 2019-07-31]
